# MSDirectXAnalysis

./: .gitignore  README.md
D3D11On12/: CMakeLists.txt
D3D11On12/D3D11On12/: CMakeLists.txt  D3D11On12.cpp  D3D11On12.h  DXSample.cpp  DXSample.h  Main.cpp  WindowApplication.cpp  WindowApplication.h
D3D11On12/D3D11On12/Utils/: DXSampleHelper.cpp  DXSampleHelper.h  Utils.h
ExecuteIndirect/: CMakeLists.txt
ExecuteIndirect/ExecuteIndirect/: CMakeLists.txt  D3D11On12.cpp  D3D11On12.h  DXSample.h  Main.cpp
ExecuteIndirect/ExecuteIndirect/Utils/: Utils.h
